V1 envoi objet JSON (remplacer url createpams.js)

--- a/templates/default/create.html.twig
+++ b/templates/default/create.html.twig
@@ -33,7 +33,9 @@
         <ul>
             <li class="grey-tooltip" data-toggle="tooltip" data-placement="bottom" title="Foire aux Questions"><img src="{{ asset('images/faq.png') }}"/></li>
             <li class="grey-tooltip" data-toggle="tooltip" data-placement="bottom" title="Visualiser le Pam's"><img src="{{ asset('images/visualiser.png') }}"/></li>
+   
         </ul>
+                 <button type="submit" class="btn btn-primary" id="sendDataSubmit">Publier</button>
     </div>
 </nav>
 
@@ -206,7 +208,7 @@
                 </div>
             </div>
                 <div class="button-container">
-                     <button type="submit" class="btn btn-primary submit-btn" >Valider</button>
+                     <button type="submit" class="btn btn-primary submit-btn" id="imageGallerySubmit" >Valider</button>
                  </div>
         </form>
 </div>
