--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -23,8 +23,8 @@
     <!-- partial:../../partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-            <a class="navbar-brand brand-logo" href="{{ path('admin_dashboard') }}"><img src="{{ asset('assets/admin/images/logo.svg') }}" alt="logo"/></a>
-            <a class="navbar-brand brand-logo-mini" href="{{ path('admin_dashboard') }}"><img src="{{ asset('assets/admin/images/logo-mini.svg') }}" alt="logo"/></a>
+            <a class="navbar-brand brand-logo" href="{{ path('admin_dashboard') }}">PAMS CODE ADMIN</a>
+            <a class="navbar-brand brand-logo-mini" href="{{ path('admin_dashboard') }}">PAMS CODE ADMIN</a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
             <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -53,13 +53,6 @@
     <div class="container-fluid page-body-wrapper">
 
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
-            <div class="sidebar-profile">
-                <div class="d-flex align-items-center justify-content-between">
-                    <div class="profile-desc">
-                        <p class="name mb-0">Admin Pam's</p>
-                    </div>
-                </div>
-            </div>
             <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('admin_dashboard') }}">
