--- a/public/css/main.css
+++ b/public/css/main.css
@@ -636,7 +636,7 @@ ul{
   margin-bottom: 20px;
 }
 
- #addImageContent{
+ #addImageContent, #addVideoContent{
   display: none;
 }
 
@@ -860,5 +860,11 @@ ul.thumbnails.image_picker_selector li .thumbnail.selected {
   position: absolute;
   top: -32px;
   right: 24px;
+  display: none;
+}
+
+.createContentVideo{
+  width: 100%;
+  height: 100%;
   display: none;
 }
