--- a/public/css/main.css
+++ b/public/css/main.css
@@ -367,6 +367,18 @@ ul{
   z-index: -1;
 }
 
+#bodyBackdrop{
+  background-color: transparent;
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  top: 120px;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  display: block;
+}
+
 #createNav{
   padding-top: 25px;
   display: inline-block;
