--- a/public/css/main.css
+++ b/public/css/main.css
@@ -340,6 +340,13 @@ ul{
   padding: 5px 35px;
 }
 
+.seemore-btn, .seemore-btn:focus, .seemore-btn:hover, .seemore-btn:active{
+  background-color: #007bff;
+  border-color: #007bff;
+  padding: 5px 35px;
+}
+
+
 /*Datepicker*/
 
 [type="date"] {
@@ -904,6 +911,47 @@ ul.thumbnails.image_picker_selector li .thumbnail.selected {
   padding: 10px;
 }
 
+.to-populate-citation, .to-populate-infos, .to-populate-auteur{
+
+  font-family: 'Blenda', sans-serif;
+}
+
+.to-populate-citation{
+  padding: 10px;
+  font-size: 62px;
+  color: white;
+}
+
+/*
+.to-populate-citation:before{
+  content: '"' ;
+  font-size: 62px;
+  color: white;
+  text-align: left;
+}
+
+.to-populate-infos:after{
+  content: '"' ;
+  font-size: 62px;
+  color: white;
+  text-align: right;
+}
+*/
+
+.to-populate-auteur{
+  text-align:right;
+  font-size: 24px;
+  color: black;
+  margin-bottom: 0px;
+}
+
+.to-populate-infos{
+  text-align:right;
+  font-size: 18px;
+  color: black;
+}
+
+
 .filled-block{
   background: none!important;
 }
@@ -934,3 +982,30 @@ ul.thumbnails.image_picker_selector li .thumbnail.selected {
   outline: none;
 }
 
+/*citations container*/
+
+#citationsContainer {
+  background-color: white;
+  border-radius: 10px;
+ /* border: 4px solid black;
+    width: 620px;*/
+  min-height: 320px;
+  padding: 40px;
+ /* position: absolute; */
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
+  z-index: 2;
+  display: none;
+
+}
+
+
+#citationFormSubmit{
+  float: right;
+}
+
+#citationFormSeemore{
+  float: left;
+}
