Test createur view

--- a/templates/default/createur_view.html.twig
+++ b/templates/default/createur_view.html.twig
@@ -901,7 +901,7 @@
 
 
 <script>
-    var pamsJs = '{{ Pamsjson|e('js') }}'; 
+    var pamsJs = {{ Pamsjson|raw }};
     console.log(pamsJs);
 </script>
 
