--- a/templates/default/createur_view.html.twig
+++ b/templates/default/createur_view.html.twig
@@ -901,8 +901,7 @@
 
 
 <script>
-    var pamsJs = {{ Pamsjson|raw }};
-    console.log(pamsJs);
+    var pamsJson = {{ Pamsjson|raw }};
 </script>
 
 
