--- a/templates/default/createur_view.html.twig
+++ b/templates/default/createur_view.html.twig
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/font-awesome.min.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ asset('css/spectrum.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ asset('css/main.css') }}"/>
-    <link rel="stylesheet" type="text/css" href="{{ asset('css/view.css') }}"/
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/view.css') }}"/>
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
     <!--froala-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
