ajout post sur "view pams" + corr css firstform

--- a/templates/default/create.html.twig
+++ b/templates/default/create.html.twig
@@ -34,7 +34,7 @@
     <div id="navRight">
         <ul>
             <li class="grey-tooltip" data-toggle="tooltip" data-placement="bottom" title="Foire aux Questions" id="faqToggle"><img src="{{ asset('images/faq.png') }}"/></li>
-            <li class="grey-tooltip" data-toggle="tooltip" data-placement="bottom" title="Visualiser le Pam's"><a href="createur_view"><img src="{{ asset('images/visualiser.png') }}"/></a></li>
+            <li class="grey-tooltip" data-toggle="tooltip" data-placement="bottom" title="Visualiser le Pam's"><a href="createur_view" id="sendDataView"><img src="{{ asset('images/visualiser.png') }}"/></a></li>
 
         </ul>
         <button type="submit" class="btn btn-primary" id="sendDataSubmit">Publier</button>
