--- a/public/css/main.css
+++ b/public/css/main.css
@@ -740,8 +740,6 @@ ul.thumbnails.image_picker_selector li .thumbnail.selected {
 
 
 /*Widget Musique*/
-
-
 #musiqueContainer{
   display: none;
 }
@@ -826,8 +824,63 @@ ul.thumbnails.image_picker_selector li .thumbnail.selected {
   border-color: #222;
 }
 
-/*Range Opacity*/
+/* Popup publication*/
+#publicationPopup{
+  background-color: white;
+  border-radius: 10px;
+  border: 4px solid black;
+  text-align: center;
+  width: 420px;
+  position: absolute;
+  padding: 25px 50px;
+  right: 42px;
+  top: 142px;
+  display: none;
+  z-index: 2;
+}
 
+#publicationPopup h1{
+  width: 100%;
+  font-size: 32px;
+}
+
+#publicationPopup h2{
+  font-size: 18px;
+  width: 100%;
+}
+
+#publicationPopup p{
+  font-size: 14px;
+}
+
+#publicationInputContainer{
+  width: 100%;
+}
+
+#publicationInput{
+  padding: 5px 10px;
+  outline: none;
+}
+
+#publicationPopupEmailForm button{
+  padding: 15px;
+  vertical-align: top;
+  background-color: #3997d6;
+  border: none;
+  height: 38px;
+  width: 68px;
+  margin-left: -10px;
+  position: relative;
+}
+
+#publicationPopupEmailForm button img{
+  position: absolute;
+  width: 72px;
+  top: -17px;
+  left: -2px;
+}
+
+/*Range Opacity*/
 .rangecontainer {
   width: 100%; /* Width of the outside container */
 }
