--- a/templates/default/create.html.twig
+++ b/templates/default/create.html.twig
@@ -10,13 +10,24 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/spectrum.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ asset('css/main.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ asset('css/froala_style.min.css') }}"/>
-    <link rel="stylesheet" type="text/css" href="{{ asset('css/bootstrap-lightbox.min.css') }}"/>
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
-    <!--froala-->
+
+    <!--froala
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css">
     <link href="https://cdn.jsdelivr.net/npm/froala-editor@2.9.3/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css"/>
-    <link href="https://cdn.jsdelivr.net/npm/froala-editor@2.9.3/css/froala_style.min.css" rel="stylesheet" type="text/css"/>
+    <link href="https://cdn.jsdelivr.net/npm/froala-editor@2.9.3/css/froala_style.min.css" rel="stylesheet" type="text/css"/>-->
+
+    <script src="https://cloud.tinymce.com/5/tinymce.min.js?yk5tfcnfy2w2giibj5ecfd781lyz2w0bec63hvn17mppalhm"></script>
+    <script>tinymce.init({
+        selector: 'textarea', 
+        plugins: "emoticons",
+        toolbar: 'fontselect fontsizeselect bold italic underline strikethrough | forecolor backcolor | emoticons | undo redo',
+        menubar: ' '
+        });
+    </script>
+
+
 </head>
 <body>
 <div id="createBody"></div>
@@ -272,23 +283,22 @@
 <script src="{{ asset('js/createpams.js') }}"></script>
 <!--script src="{{ asset('js/dropzone.js') }}"></script-->
 <script src="{{ asset('js/bootstrap-new.min.js') }}"></script>
-<script src="{{ asset('js/bootstrap-lightbox.min.js') }}"></script>
 <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 
-<!--froala-->
+<!--froala
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/xml/xml.min.js"></script>
 
-<!-- Include Editor JS files. -->
+<!-- Include Editor JS files.
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/froala-editor@2.9.3/js/froala_editor.pkgd.min.js"></script>
 
-<!-- Initialize the editor. -->
+<!-- Initialize the editor
 <script> $(function () {
         $('.froala-textarea').froalaEditor({
-            toolbarButtons: ['fullscreen', 'emoticons', 'bold', 'italic', 'underline', '|', 'fontFamily', 'fontSize', 'color', 'inlineStyle', 'paragraphStyle', '|', 'paragraphFormat', 'align', 'outdent', 'indent', 'undo', 'redo']
+            toolbarButtons: [ 'emoticons', 'bold', 'italic', 'underline', 'fontFamily', 'fontSize', 'color', 'inlineStyle', 'fullscreen']
         })
-    });   </script>
+    });   </script>-->
 
 
 <audio id="sound" controls></audio>
