--- a/templates/default/create.html.twig
+++ b/templates/default/create.html.twig
@@ -20,7 +20,7 @@
 
     <script src="https://cloud.tinymce.com/5/tinymce.min.js?yk5tfcnfy2w2giibj5ecfd781lyz2w0bec63hvn17mppalhm"></script>
     <script>tinymce.init({
-        selector: 'textarea', 
+        selector: '#toFill', 
         plugins: "emoticons",
         toolbar: 'fontselect fontsizeselect bold italic underline strikethrough | forecolor backcolor | emoticons | undo redo',
         menubar: ' '
