--- a/templates/default/createur_view_old.html.twig
+++ b/templates/default/createur_view_old.html.twig
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/font-awesome.min.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ asset('css/spectrum.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ asset('css/main.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/view.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/view-load.css') }}"/>
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
     <!--froala-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -26,8 +28,8 @@
 <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
 <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
 <script src="{{ asset('js/popper.min.js') }}"></script>
-<script src="{{ asset('js/edit-pams.js') }}"></script>
-<script src="{{ asset('js/createpams.js') }}"></script>
+<script src="{{ asset('js/view-pams.js') }}"></script>
+<script src="{{ asset('js/view-loader.js') }}"></script>
 <script src="{{ asset('js/bootstrap-new.min.js') }}"></script>a
 <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
